{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 25,
  "lineage": "f64e9e70-f1c3-3c16-9818-867acc18e785",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0887e1d5e322290cf",
            "arn": "arn:aws:ec2:us-east-1:211125395960:instance/i-072feffed1ac75eed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072feffed1ac75eed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b4b854d660509019",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_dns": "ec2-34-204-69-132.compute-1.amazonaws.com",
            "public_ip": "34.204.69.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e85e576134a1f72e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e555a28d97e0642",
            "tags": {
              "Name": "WebServer-dev"
            },
            "tags_all": {
              "Name": "WebServer-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2067b9240b0017c"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.web_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:security-group/sg-0c2067b9240b0017c",
            "description": "Security group for web instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2067b9240b0017c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-web-sg",
            "name_prefix": "",
            "owner_id": "211125395960",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eca9bd5df6857504",
            "arn": "arn:aws:ec2:us-east-1:211125395960:elastic-ip/eipalloc-0eca9bd5df6857504",
            "association_id": "eipassoc-02f099e61c58b6409",
            "domain": "vpc",
            "id": "eipalloc-0eca9bd5df6857504",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ecb278b5884e48ad",
            "private_dns": "ip-10-0-1-87.ec2.internal",
            "private_ip": "10.0.1.87",
            "public_dns": "ec2-3-212-227-167.compute-1.amazonaws.com",
            "public_ip": "3.212.227.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terrafom_NATGatewayEIP"
            },
            "tags_all": {
              "Name": "terrafom_NATGatewayEIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "modules_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:internet-gateway/igw-0c184dff489dcbdc2",
            "id": "igw-0c184dff489dcbdc2",
            "owner_id": "211125395960",
            "tags": {
              "Name": "vpc-dev-igw"
            },
            "tags_all": {
              "Name": "vpc-dev-igw"
            },
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "modules_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eca9bd5df6857504",
            "association_id": "eipassoc-02f099e61c58b6409",
            "connectivity_type": "public",
            "id": "nat-07ca6bc50e882c27a",
            "network_interface_id": "eni-0ecb278b5884e48ad",
            "private_ip": "10.0.1.87",
            "public_ip": "3.212.227.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e555a28d97e0642",
            "tags": {
              "Name": "vpc-dev-nat"
            },
            "tags_all": {
              "Name": "vpc-dev-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:route-table/rtb-0aa5cea059026b184",
            "id": "rtb-0aa5cea059026b184",
            "owner_id": "211125395960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ca6bc50e882c27a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-dev-private-route"
            },
            "tags_all": {
              "Name": "vpc-dev-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_nat_gateway.modules_vpc",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:route-table/rtb-0755d7834872e39be",
            "id": "rtb-0755d7834872e39be",
            "owner_id": "211125395960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c184dff489dcbdc2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-dev-public-route"
            },
            "tags_all": {
              "Name": "vpc-dev-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03621cc3430387de4",
            "route_table_id": "rtb-0aa5cea059026b184",
            "subnet_id": "subnet-07e9c11cb43362102"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_nat_gateway.modules_vpc",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00faf5f006dc5aec8",
            "route_table_id": "rtb-0aa5cea059026b184",
            "subnet_id": "subnet-08e7c206f038710d4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_nat_gateway.modules_vpc",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0720cf5f0a0dde7",
            "route_table_id": "rtb-0aa5cea059026b184",
            "subnet_id": "subnet-0294bf6c05086bb22"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_nat_gateway.modules_vpc",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9c06b9b795a3006",
            "route_table_id": "rtb-0755d7834872e39be",
            "subnet_id": "subnet-03e555a28d97e0642"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07151256df0f9da30",
            "route_table_id": "rtb-0755d7834872e39be",
            "subnet_id": "subnet-05b4d55a1e6ad0f38"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0663009a3e554f5be",
            "route_table_id": "rtb-0755d7834872e39be",
            "subnet_id": "subnet-00f10a91894a07a31"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.modules_vpc_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-07e9c11cb43362102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e9c11cb43362102",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 0"
            },
            "tags_all": {
              "Name": "Private Subnet 0"
            },
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-08e7c206f038710d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e7c206f038710d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-0294bf6c05086bb22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0294bf6c05086bb22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-03e555a28d97e0642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e555a28d97e0642",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 0"
            },
            "tags_all": {
              "Name": "Public Subnet 0"
            },
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-05b4d55a1e6ad0f38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b4d55a1e6ad0f38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:subnet/subnet-00f10a91894a07a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f10a91894a07a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125395960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0ab9d5b90fb3a9ab1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.modules_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "modules_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125395960:vpc/vpc-0ab9d5b90fb3a9ab1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076210f2cf9610f7d",
            "default_route_table_id": "rtb-0983954aca0b43426",
            "default_security_group_id": "sg-03e0b8ee3e3f76c94",
            "dhcp_options_id": "dopt-033ceba9ec21dcf28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab9d5b90fb3a9ab1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0983954aca0b43426",
            "owner_id": "211125395960",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}